Recover the jieblog theme,and fix the nav bar

--- a/sirenappengine/index.yaml
+++ b/sirenappengine/index.yaml
@@ -10,20 +10,20 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 16 times in query history.
+# Used 463 times in query history.
 - kind: Comments
   properties:
   - name: comments_post_on
     direction: desc
 
-# Used 81 times in query history.
+# Used 463 times in query history.
 - kind: Post
   properties:
   - name: draft
   - name: post_on
     direction: desc
 
-# Used 18 times in query history.
+# Unused in query history -- copied from input.
 - kind: Post
   properties:
   - name: get_post_month
@@ -31,14 +31,14 @@ indexes:
   - name: created
     direction: desc
 
-# Used 2 times in query history.
+# Unused in query history -- copied from input.
 - kind: Post
   properties:
   - name: get_post_month
   - name: get_post_year
   - name: post_on
 
-# Used 5 times in query history.
+# Unused in query history -- copied from input.
 - kind: Post
   properties:
   - name: post_on
