--- a/sirenappengine/index.yaml
+++ b/sirenappengine/index.yaml
@@ -10,13 +10,13 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 497 times in query history.
+# Used 504 times in query history.
 - kind: Comments
   properties:
   - name: comments_post_on
     direction: desc
 
-# Used 557 times in query history.
+# Used 564 times in query history.
 - kind: Post
   properties:
   - name: draft
@@ -38,7 +38,7 @@ indexes:
   - name: get_post_year
   - name: post_on
 
-# Unused in query history -- copied from input.
+# Used once in query history.
 - kind: Post
   properties:
   - name: post_on
